--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-artifacts/
+.DS_Store
+*.db
+*.db-journal
+*.suo
+*.user
+/.nuget/
+/.vscode/
+/.dotnet/
+/.vs/
+/.vscode/
+/artifacts/
+/packages/
+bin/
+obj/
 project.lock.json
+.settings
+*.sublime-*
+*.pfx
+launchSettings.json
+/.build/
+.testPublish/
+*.project.lock.json
+*.nuget.props
+*.nuget.targets
+sqlite3.dll
