--- a/src/sqlite.native/project.json
+++ b/src/sqlite.native/project.json
@@ -20,6 +20,8 @@
             "mappings": {
                 "runtimes/win7-x64/native/": "runtimes/win7-x64/native/*",
                 "runtimes/win7-x86/native/": "runtimes/win7-x86/native/*",
+                "runtimes/linux-x64/native/": "runtimes/linux-x64/native/*",
+                "runtimes/osx-x64/native/": "runtimes/osx-x64/native/*",
                 "build/net45/": "build/net45/*"
             }
         }
