--- a/SQLite.nuspec
+++ b/SQLite.nuspec
@@ -6,7 +6,7 @@
     <authors>SQLite Development Team</authors>
     <owners>SQLite Development Team</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>SQLite is a software library that implements a self-contained, serverless, zero-configuration, transactional SQL database engine. This package contains native libraries for SQLite on Univeral Windows Platform apps.</description>
+    <description>SQLite is a software library that implements a self-contained, serverless, zero-configuration, transactional SQL database engine. This package contains native libraries for SQLite on Windows (desktop and Universal Windows apps), macOS, and Linux.</description>
     <copyright>Public Domain</copyright>
     <tags>SQLite,embedded,database,sql</tags>
     <dependencies>
