--- a/files/SQLite.props
+++ b/files/SQLite.props
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup Condition="!Exists('$(MSBuildProjectName).project.json') And !Exists('project.json') And '$(Platform)' == 'AnyCPU'">
+  <ItemGroup Condition="!Exists('$(MSBuildProjectName).project.json') And !Exists('project.json') And '$(Platform)' == 'AnyCPU' And '$(ExcludeSqliteNative)' != 'true' ">
     <Content Include="$(MSBuildThisFileDirectory)..\..\runtimes\win7-x86\native\*">
       <Link>x86\%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -12,14 +12,14 @@
       <Visible>False</Visible>
     </Content>
   </ItemGroup>
-  <ItemGroup Condition="!Exists('$(MSBuildProjectName).project.json') And !Exists('project.json') And '$(Platform)' == 'x86'">
+  <ItemGroup Condition="!Exists('$(MSBuildProjectName).project.json') And !Exists('project.json') And '$(Platform)' == 'x86' And '$(ExcludeSqliteNative)' != 'true' ">
     <Content Include="$(MSBuildThisFileDirectory)..\..\runtimes\win7-x86\native\*">
       <Link>%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Visible>False</Visible>
     </Content>
   </ItemGroup>
-  <ItemGroup Condition="!Exists('$(MSBuildProjectName).project.json') And !Exists('project.json') And '$(Platform)' == 'x64'">
+  <ItemGroup Condition="!Exists('$(MSBuildProjectName).project.json') And !Exists('project.json') And '$(Platform)' == 'x64' And '$(ExcludeSqliteNative)' != 'true' ">
     <Content Include="$(MSBuildThisFileDirectory)..\..\runtimes\win7-x64\native\*">
       <Link>%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
