--- a/tools/PackageBuilder/project.json
+++ b/tools/PackageBuilder/project.json
@@ -7,10 +7,10 @@
     "netcoreapp1.0": {
       "dependencies": {
         "Microsoft.NETCore.App": {
-          "version": "1.0.0-*",
+          "version": "1.0.0",
           "type": "platform"
         },
-        "System.IO.Packaging": "4.0.0-*"
+        "System.IO.Packaging": "4.0.0"
       }
     }
   }
