--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,6 @@ environment:
 install:
   - ps: .\download_artifacts.ps1
 build_script:
-  - build.cmd -OsxZip binaries/osx-x64.zip -LinuxZip binaries/linux-x64.zip
+  - build.cmd -VersionSuffix alpha-%APPVEYOR_BUILD_NUMBER% -OsxZip binaries/osx-x64.zip -LinuxZip binaries/linux-x64.zip
 artifacts:
   - path: 'artifacts\build\*.nupkg'
