--- a/SQLite.nuspec
+++ b/SQLite.nuspec
@@ -6,9 +6,11 @@
     <authors>SQLite Development Team</authors>
     <owners>SQLite Development Team</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>SQLite is a software library that implements a self-contained, serverless, zero-configuration, transactional SQL database engine. This package contains native libraries for SQLite on Windows (desktop and Universal Windows apps), macOS, and Linux.</description>
+    <description>SQLite is a software library that implements a self-contained, serverless, zero-configuration, transactional SQL database engine. This package contains native libraries for SQLite on Linux, macOS, and Windows (desktop and Universal Windows apps).</description>
     <copyright>Public Domain</copyright>
     <tags>SQLite,embedded,database,sql</tags>
+    <iconUrl>https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Sqlite-square-icon.svg/64px-Sqlite-square-icon.svg.png</iconUrl>
+    <releaseNotes>$releasenotes$</releaseNotes>
     <dependencies>
       <group targetFramework=".NETStandard1.0" />
     </dependencies>
