--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
-language: c
-sudo: required
+language: csharp
+sudo: false
 dist: trusty
 os:
-- linux
-- osx
-osx_image: xcode7.1
+  - linux
+  - osx
+osx_image: xcode7.3
+mono: none
+dotnet: 1.0.3
 env:
   global:
   - DOTNET_CLI_TELEMETRY_OPTOUT: 1
@@ -23,13 +25,13 @@ branches:
     - dev
     - /^(.*\/)?ci-.*$/
 before_install:
-- if test "$TRAVIS_OS_NAME" == "osx"; then brew update; brew install openssl; ln -s
-  /usr/local/opt/openssl/lib/libcrypto.1.0.0.dylib /usr/local/lib/; ln -s /usr/local/opt/openssl/lib/libssl.1.0.0.dylib
-  /usr/local/lib/; fi
-- if test "$TRAVIS_OS_NAME" != "osx"; then sudo apt-get -qq update; sudo apt-get install -y musl-dev musl-tools; fi
+  - if test "$TRAVIS_OS_NAME" == "osx"; then brew update; brew install openssl; ln -s
+    /usr/local/opt/openssl/lib/libcrypto.1.0.0.dylib /usr/local/lib/; ln -s /usr/local/opt/openssl/lib/libssl.1.0.0.dylib
+    /usr/local/lib/; fi
+  - if test "$TRAVIS_OS_NAME" != "osx"; then sudo apt-get -qq update; sudo apt-get install -y musl-dev musl-tools; fi
 script:
-- ./compile.sh
-- if test "$TRAVIS_OS_NAME" != "osx"; then CC=musl-gcc rid=alpine-x64 ./compile.sh; fi
-- ./test.sh
+  - ./compile.sh
+  - if test "$TRAVIS_OS_NAME" != "osx"; then CC=musl-gcc rid=alpine-x64 ./compile.sh; fi
+  - ./test.sh
 after_success:
-- ./deploy_artifacts.sh
+  - ./deploy_artifacts.sh
