--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,15 @@ branches:
     - release
     - dev
     - /^(.*\/)?ci-.*$/
+addons:
+  apt:
+    packages:
+      - musl-dev
+      - musl-tools
 before_install:
   - if test "$TRAVIS_OS_NAME" == "osx"; then brew update; brew install openssl; ln -s
     /usr/local/opt/openssl/lib/libcrypto.1.0.0.dylib /usr/local/lib/; ln -s /usr/local/opt/openssl/lib/libssl.1.0.0.dylib
     /usr/local/lib/; fi
-  - if test "$TRAVIS_OS_NAME" != "osx"; then sudo apt-get -qq update; sudo apt-get install -y musl-dev musl-tools; fi
 script:
   - ./compile.sh
   - if test "$TRAVIS_OS_NAME" != "osx"; then CC=musl-gcc rid=alpine-x64 ./compile.sh; fi
