--- a/SQLite.nuspec
+++ b/SQLite.nuspec
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
-  <metadata minClientVersion="2.12">
+  <metadata minClientVersion="4.0.0">
     <id>SQLite</id>
     <version>$version$</version>
     <authors>SQLite Development Team</authors>
@@ -13,14 +13,15 @@
     <releaseNotes>$releasenotes$</releaseNotes>
     <dependencies>
       <group targetFramework=".NETStandard1.0" />
+      <group targetFramework=".NETFramework4.5" />
     </dependencies>
   </metadata>
   <files>
     <file src="files/sqlite-version.txt" target="/" />
     <file src="files/_._" target="lib/netstandard1.0/" />
-    <file src="files/SQLite.props" target="build/net45" />
-    <file src="runtimes/win7-x86/native/sqlite3.dll" target="runtimes/win7-x86/native" />
-    <file src="runtimes/win7-x64/native/sqlite3.dll" target="runtimes/win7-x64/native" />
+    <file src="files/SQLite.targets" target="build/net45" />
+    <file src="runtimes/win-x86/native/sqlite3.dll" target="runtimes/win-x86/native" />
+    <file src="runtimes/win-x64/native/sqlite3.dll" target="runtimes/win-x64/native" />
     <file src="runtimes/linux-x64/native/libsqlite3.so" target="runtimes/linux-x64/native" />
     <file src="runtimes/alpine-x64/native/libsqlite3.so" target="runtimes/alpine-x64/native" />
     <file src="runtimes/osx-x64/native/libsqlite3.dylib" target="runtimes/osx-x64/native" />
