converted to conditional targets that copy the files before build

--- a/SQLite.nuspec
+++ b/SQLite.nuspec
@@ -18,7 +18,7 @@
   <files>
     <file src="files/sqlite-version.txt" target="/" />
     <file src="files/_._" target="lib/netstandard1.0/" />
-    <file src="files/SQLite.props" target="build/net45" />
+    <file src="files/SQLite.targets" target="build/net45" />
     <file src="runtimes/win7-x86/native/sqlite3.dll" target="runtimes/win7-x86/native" />
     <file src="runtimes/win7-x64/native/sqlite3.dll" target="runtimes/win7-x64/native" />
     <file src="runtimes/linux-x64/native/libsqlite3.so" target="runtimes/linux-x64/native" />
